# tetroku

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: board.rs  lib.rs  mino.rs  util.rs
tui/: Cargo.toml
tui/src/: game.rs  main.rs  theme.rs  util.rs
tui/src/views/: board.rs  mino.rs  mod.rs  score.rs
